--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/yoonzm/swagger2js#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "cross-spawn": "^6.0.5",
     "js-beautify": "^1.10.0",
     "mustache": "^3.0.1"
   }
